# CMirr

./: .gitignore  CMakeLists.txt  README.md  dev.bashrc
src/: CMirrExt.cpp  CMirrExt.h  MOS.h  Netlist.h  net.h  pin.h  type.h
src/MirrExt/: CMirrExt.cpp  CMirrExt.h
src/db/: Mos.h  Net.h  Netlist.cpp  Netlist.h  Pin.cpp  Pin.h
src/global/: type.h
src/main/: main.cpp
src/parser/: simpNetlist.cpp  simpNetlist.h
test/edathon-p5-1/: netlist  run.sh
test/edathon-p5-2/: netlist
test/edathon-p5-3/: netlist
